[gd_scene load_steps=32 format=2]

[ext_resource path="res://Scripts-C/Creator.gd" type="Script" id=1]
[ext_resource path="res://Imagens/Backgrounds/background.png" type="Texture" id=2]
[ext_resource path="res://Imagens/Grid 12.png" type="Texture" id=3]
[ext_resource path="res://Imagens/Objetos/Criacao/CriacaoNovas/novas imagens/tom 3.png" type="Texture" id=4]
[ext_resource path="res://Imagens/Objetos/Criacao/cabelo1.png" type="Texture" id=5]
[ext_resource path="res://Imagens/Objetos/Criacao/CriacaoNovas/novas imagens/blusa v idle.png" type="Texture" id=6]
[ext_resource path="res://Imagens/Objetos/Criacao/CriacaoNovas/novas imagens/calça.png" type="Texture" id=7]
[ext_resource path="res://Imagens/Botoes/salvar.png" type="Texture" id=8]
[ext_resource path="res://Imagens/Botoes/salvar mouse over.png" type="Texture" id=9]
[ext_resource path="res://Imagens/Botoes/seguinte.png" type="Texture" id=10]
[ext_resource path="res://Imagens/Botoes/seguinte_c.png" type="Texture" id=11]
[ext_resource path="res://Imagens/Botoes/seguinte_h.png" type="Texture" id=12]
[ext_resource path="res://Imagens/Objetos/Criacao/Menu Criacao/cabelo crespo.png" type="Texture" id=13]
[ext_resource path="res://Imagens/Objetos/Criacao/Menu Criacao/cabelo curto.png" type="Texture" id=14]
[ext_resource path="res://Imagens/Objetos/Criacao/Menu Criacao/cabelo quebra padrões.png" type="Texture" id=15]
[ext_resource path="res://Imagens/Objetos/Criacao/tom de pele2.png" type="Texture" id=16]
[ext_resource path="res://Imagens/Objetos/Criacao/tom de pele3.png" type="Texture" id=17]
[ext_resource path="res://Imagens/Objetos/Criacao/Menu Criacao/tom de pele 3.png" type="Texture" id=18]
[ext_resource path="res://Imagens/Objetos/Criacao/Menu Criacao/blusa gay.png" type="Texture" id=19]
[ext_resource path="res://Imagens/Objetos/Criacao/Menu Criacao/blusa grande.png" type="Texture" id=20]
[ext_resource path="res://Imagens/Objetos/Criacao/Menu Criacao/regata.png" type="Texture" id=21]
[ext_resource path="res://Imagens/Objetos/Criacao/Menu Criacao/calcao.png" type="Texture" id=22]
[ext_resource path="res://Imagens/Objetos/Criacao/Menu Criacao/calça.png" type="Texture" id=23]
[ext_resource path="res://Imagens/Objetos/Criacao/Menu Criacao/short jeans.png" type="Texture" id=24]
[ext_resource path="res://Imagens/Textos/crie seu personagem.png" type="Texture" id=25]
[ext_resource path="res://Imagens/Textos/corpo.png" type="Texture" id=26]
[ext_resource path="res://Imagens/Textos/cabelo.png" type="Texture" id=27]
[ext_resource path="res://Imagens/Textos/roupa.png" type="Texture" id=28]
[ext_resource path="res://Imagens/Textos/nome.png" type="Texture" id=29]
[ext_resource path="res://Fontes/FontGodot/Personagem.tres" type="DynamicFont" id=30]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="Creator" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1920.0
margin_bottom = -1080.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.11169
margin_right = 1926.11
margin_bottom = 1080.0
texture = ExtResource( 2 )
expand = true

[node name="Grid 12" type="TextureRect" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 3 )

[node name="Player" type="Sprite" parent="."]
position = Vector2( 468.257, 615.229 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )

[node name="Cabelo2" type="Sprite" parent="Player"]
position = Vector2( 12.4966, -447.267 )
texture = ExtResource( 5 )

[node name="Roupa2" type="Sprite" parent="Player"]
position = Vector2( 8.7923, -158.287 )
texture = ExtResource( 6 )

[node name="Calca" type="Sprite" parent="Player"]
position = Vector2( -0.0635986, 212.34 )
texture = ExtResource( 7 )

[node name="Button" type="TextureButton" parent="."]
margin_left = 1470.05
margin_top = 974.0
margin_right = 1893.05
margin_bottom = 1080.0
rect_scale = Vector2( 0.7, 0.7 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 9 )

[node name="Voltar" type="TextureButton" parent="."]
margin_left = 164.0
margin_top = 490.0
margin_right = 417.0
margin_bottom = 968.0
rect_scale = Vector2( -0.4, 0.4 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 12 )

[node name="Botoes" type="Node" parent="."]

[node name="Crespo" type="TextureButton" parent="Botoes"]
margin_left = 1417.23
margin_top = 326.525
margin_right = 1648.23
margin_bottom = 523.525
rect_scale = Vector2( 0.7, 0.7 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 13 )

[node name="Curto" type="TextureButton" parent="Botoes"]
margin_left = 1577.75
margin_top = 339.475
margin_right = 1840.75
margin_bottom = 535.475
rect_scale = Vector2( 0.7, 0.7 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 14 )

[node name="QP" type="TextureButton" parent="Botoes"]
margin_left = 1721.44
margin_top = 324.366
margin_right = 1995.44
margin_bottom = 520.366
rect_scale = Vector2( 0.7, 0.7 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 15 )

[node name="TomPele1" type="TextureButton" parent="Botoes"]
margin_left = 818.139
margin_top = 305.435
margin_right = 1256.14
margin_bottom = 1385.44
rect_scale = Vector2( 0.3, 0.3 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 16 )

[node name="TomPele2" type="TextureButton" parent="Botoes"]
margin_left = 973.988
margin_top = 305.577
margin_right = 1411.99
margin_bottom = 1385.58
rect_scale = Vector2( 0.3, 0.3 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 17 )

[node name="TomPele3" type="TextureButton" parent="Botoes"]
margin_left = 1133.52
margin_top = 301.827
margin_right = 1541.52
margin_bottom = 1377.83
rect_scale = Vector2( 0.3, 0.3 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 18 )

[node name="BlusaGay" type="TextureButton" parent="Botoes"]
margin_left = 1393.63
margin_top = 552.268
margin_right = 1738.63
margin_bottom = 924.268
rect_scale = Vector2( 0.5, 0.5 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 19 )

[node name="BlusaGrande" type="TextureButton" parent="Botoes"]
margin_left = 1569.84
margin_top = 574.634
margin_right = 1926.84
margin_bottom = 910.639
rect_scale = Vector2( 0.5, 0.5 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 20 )

[node name="Regata" type="TextureButton" parent="Botoes"]
margin_left = 1743.0
margin_top = 560.0
margin_right = 2040.0
margin_bottom = 922.0
rect_scale = Vector2( 0.5, 0.5 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 21 )

[node name="Calcao" type="TextureButton" parent="Botoes"]
margin_left = 1732.0
margin_top = 741.792
margin_right = 2076.0
margin_bottom = 1038.79
rect_scale = Vector2( 0.5, 0.5 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 22 )

[node name="Calca" type="TextureButton" parent="Botoes"]
margin_left = 1416.73
margin_top = 732.683
margin_right = 1801.73
margin_bottom = 1248.68
rect_scale = Vector2( 0.4, 0.4 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 23 )

[node name="Short" type="TextureButton" parent="Botoes"]
margin_left = 1590.0
margin_top = 748.268
margin_right = 1876.0
margin_bottom = 1084.27
rect_scale = Vector2( 0.5, 0.5 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 24 )

[node name="Crie" type="TextureRect" parent="."]
margin_left = 174.728
margin_top = 64.0
margin_right = 909.728
margin_bottom = 158.001
texture = ExtResource( 25 )

[node name="Corpo" type="TextureRect" parent="."]
margin_left = 935.049
margin_top = 240.0
margin_right = 1119.05
margin_bottom = 301.0
texture = ExtResource( 26 )

[node name="Cabelo" type="TextureRect" parent="."]
margin_left = 1557.0
margin_top = 240.0
margin_right = 1772.0
margin_bottom = 301.0
texture = ExtResource( 27 )

[node name="Roupa" type="TextureRect" parent="."]
margin_left = 1571.0
margin_top = 480.0
margin_right = 1752.0
margin_bottom = 541.0
texture = ExtResource( 28 )

[node name="Nome" type="TextureRect" parent="."]
margin_left = 673.011
margin_top = 861.0
margin_right = 1353.02
margin_bottom = 1048.0
texture = ExtResource( 29 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 727.973
margin_top = 957.0
margin_right = 1302.97
margin_bottom = 1032.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = ExtResource( 30 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Voltar" to="." method="_on_Voltar_pressed"]
[connection signal="pressed" from="Botoes/Crespo" to="." method="_on_Crespo_pressed"]
[connection signal="pressed" from="Botoes/Curto" to="." method="_on_Curto_pressed"]
[connection signal="pressed" from="Botoes/QP" to="." method="_on_QP_pressed"]
[connection signal="pressed" from="Botoes/TomPele1" to="." method="_on_TomPele1_pressed"]
[connection signal="pressed" from="Botoes/TomPele2" to="." method="_on_TomPele2_pressed"]
[connection signal="pressed" from="Botoes/TomPele3" to="." method="_on_TomPele3_pressed"]
[connection signal="pressed" from="Botoes/BlusaGay" to="." method="_on_BlusaGay_pressed"]
[connection signal="pressed" from="Botoes/BlusaGrande" to="." method="_on_BlusaGrande_pressed"]
[connection signal="pressed" from="Botoes/Regata" to="." method="_on_Regata_pressed"]
[connection signal="pressed" from="Botoes/Calcao" to="." method="_on_Calcao_pressed"]
[connection signal="pressed" from="Botoes/Calca" to="." method="_on_Calca_pressed"]
[connection signal="pressed" from="Botoes/Short" to="." method="_on_Short_pressed"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
